# pigeon_sim

./: .gitignore  README.md  build.sh  dependencies.repos  fetch.sh  ping.sh  source.sh
src/pigeon_sim/: CMakeLists.txt  package.xml
src/pigeon_sim/launch/: urban_sim.launch
src/pigeon_sim/meshes/: elevon.dae  tailsitter_body.dae  tailsitter_body_wo_elevons.dae
src/pigeon_sim/src/: gazebo_client.hpp  tailsitter_spawner.hpp  tailsitter_spawner_node.cpp
src/pigeon_sim/src/gazebo_plugins/: CMakeLists.txt  gazeb_ros_transport.hpp  gazebo_flat_plate_aerodynamics.cpp  gazebo_motor_model.cpp  gazebo_motor_model.h
src/pigeon_sim/worlds/: empty.world
