<package format="3">
    <name>pigeon_sim</name>
    <version>0.0.0</version>
    <description>Simulation of tailsitter UAV for last mile logistics in urban environment</description>
    <maintainer email="jaina488@gmail.com">Akshit Jain</maintainer>

    <url type="website">https://pigeonlabs.in</url>
    <url type="repository">https://github.com/akshitj1/pigeon_sim.git</url>
    <author>Akshit Jain</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_ros</depend>
    <depend>tinyxml2</depend>
    <depend>gazebo_msgs</depend>
    <depend>mav_msgs</depend>
    <depend>rotors_gazebo_plugins</depend>

    <export>
        <!-- gazebo_ros_paths_plugin automatically adds these to
            GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
            the package.xml file. You can than use URIs of type model://my_package/stuff. -->
            <gazebo_ros                                                                 
                gazebo_plugin_path="${prefix}/lib"
                gazebo_model_path="${prefix}/.." />
    </export>
</package>